# amazon-kinesis-video-streams-demos

aws-kinesis-video-producer-sdk-canary-consumer/: pom.xml
aws-kinesis-video-producer-sdk-canary-consumer/src/main/java/: CanaryFrameProcessor.java  ProducerSdkCanaryConsumer.java
aws-kinesis-video-producer-sdk-canary-consumer/src/main/java/com/amazon/kinesis/video/canary/consumer/: CanaryFrameProcessor.java  ProducerSdkCanaryConsumer.java
producer_cpp_demos/: CMakeLists.txt
producer_cpp_demos/samples/: kinesis_file_gstreamer_sample_app.cpp
webrtc-c/canary/: .ccls  CMakeLists.txt  compile_commands.json
webrtc-c/canary/jobs/: orchestrator.groovy  runner.groovy
webrtc-c/canary/samples/: Common.c  Samples.h  kvsWebRTCClientMaster.c
webrtc-c/canary/src/: Cloudwatch.cpp  Cloudwatch.h  CloudwatchLogger.cpp  CloudwatchLogs.cpp  CloudwatchMonitoring.cpp  CloudwatchMonitoring.h  Common.cpp  Common.h  Config.cpp  Config.h  Include.h  Include_i.h  Main.cpp  Master.cpp  NOTE  Peer.cpp  Peer.h  PeerConnection.cpp
